--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,6 @@
-# Normalize --------------------------------------------------------------*/
+/* # Normalize --------------------------------------------------------------*/
+
+
 /* normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 
 
